--- a/public/style.css
+++ b/public/style.css
@@ -58,10 +58,10 @@ main {
 
 .card {
     background-color: antiquewhite;
-    height: min(300px, 25vh);
+    height: min(400px, 30vh);
     width: min(300px, 25vh);
     border: 2px solid black;
-    border-radius: 15%;
+    border-radius: 10%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -70,6 +70,28 @@ main {
 }
 .card button {
     margin-bottom: 3px;
+}
+
+.cardfilled {
+    height: min(400px, 30vh);
+    width: min(300px, 25vh);
+    border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.cardfilled a {
+    height: 100%;
+    width: 100%;
+}
+
+.cardfilled img {
+    height: 100%;
+    border-radius: 10%;
+    border: 2px solid black;
 }
 
 nav {
