--- a/public/style.css
+++ b/public/style.css
@@ -1,86 +1,121 @@
+/* Main Page CSS Elements */
+
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Sans+JP&family=Open+Sans&display=swap');
 
-@keyframes arrowUp {
-    0% {opacity: 25%;}
-    50% {opacity: 75%;}
-    100% {opacity: 25%;}
+:root {
+    --main-bg-color: #182033;
+    --main-font: white;
+    --card-alt-header: #45475f;
+    --header-font-size: min(max(2.5vw, 20px), 32px);
 }
 
 body {
+    background-color: var(--main-bg-color);
     margin: 0px;
     font-family: 'Lato', sans-serif;
-    
+    color: var(--main-font);
 }
 
+/* Top Header CSS Elements */
+
 header {
-    background-color: grey;
-    height: 5vh;
+    background-color: var(--main-bg-color);
+    height: 10vh;
     margin: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    font-size: var(--header-font-size);
 }
 
-header h1 {
-    margin-right: 5px;
+/* Navbar CSS Elements */
+
+#navbar {
+    height: 10vh;
+    margin: auto;
+    background-color: var(--card-alt-header);
+    color: white;
+    display: flex;
+    justify-content: center;
 }
 
-#inlineScroll {
-    text-align: left;
-    margin-left: 5%;
+#navbar ul {
+    height: 100%;
+    width: 75%;
+    list-style-type: none; 
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: flex-end;
+    
 }
+
+#navbar ul li {
+    border-radius: 20px 0 0 0;
+    font-size: max(2vw, 20px);
+    padding: 0 4px 0 4px;
+    background-color: linear-gradient(to top, var(--main-bg-color), var(--card-alt-header));
+    height: 75%;
+    display: flex;
+    align-items: center;
+    
+}
+
+#navbar li:hover {
+    color: grey;
+    cursor: pointer;
+}
+
+/* Main Section of Page */
 
 #container {
     display: flex;
+    background-color: var(--main-bg-color);
     flex-direction: row;
-    height: 95vh;
+    height: 80vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
 }
 
-main {
-    background-color: green;
-    height: 100%;
-    width: 90vw;
-}
+/* Projects CSS Elements */
 
 #Projects {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
 }
 
-#mainHeader {
-    position: fixed;
-    
-    text-align: center;
-}
-
 .card {
-    background-color: antiquewhite;
-    height: min(400px, 30vh);
-    width: min(300px, 25vh);
-    border: 2px solid black;
-    border-radius: 10%;
+    background-color: var(--card-alt-header);
+    height: max(450px, 30vh);
+    width: max(300px, 20vh);
+    margin: 15px;
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    
 }
+
 .card button {
     margin-bottom: 3px;
 }
 
 .cardfilled {
-    height: min(400px, 30vh);
-    width: min(300px, 25vh);
-    border-radius: 10%;
+    height: max(450px, 30vh);
+    width: max(300px, 20vh);
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    
+    margin: 15px;
 }
 
 .cardfilled a {
@@ -90,54 +125,36 @@ main {
 
 .cardfilled img {
     height: 100%;
-    border-radius: 10%;
+    width: 100%;
+    border-radius: 25px;
     border: 2px solid black;
 }
 
-nav {
-    height: 100%;
-    width: 10vw;
-    background-color: black;
-    color: white;
+/* Home CSS Elements */
+
+#Home {
+    height: 75%;
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-size: max(3.5vw, 20px);
 }
 
-nav ul {
-    list-style-type: none; 
-}
-
-nav li:hover {
-    color: grey;
-    cursor: pointer;
-}
-
-#hideBar {
-    color: black;
-    position: fixed;
-    right: 50%;
-    animation-name: arrowUp;
-    animation-duration: 2.5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+#inlineScroll {
+    text-align: left;
+    margin-left: 25%;
     
-}
-#hideBar:hover {
-    color: white;
-    transition: color 200ms;
-    cursor: pointer;
-}
-
-#hideBar:not(hover) {
-    color: black;
-    transition: color 2s;
 }
 
 #pause {
     position: fixed;
-    padding-bottom: 5px;
+    margin-top: max(20px, 3.5vw);
 }
 #play {
     position: fixed;
-    padding-bottom: 5px;
+    margin-top: max(20px, 3.5vw);
 }
 
 #pause:hover {
@@ -149,5 +166,3 @@ nav li:hover {
     color: rgb(122, 31, 31);
     cursor: pointer;
 }
-
-
